plugins/kotlin/idea/tests/testData/multiModuleLineMarker/transitive/base_common/common.kt
expect fun <!LINE_MARKER("descr='Has actuals in base_jvm module'")!>foo<!>(): Int
